<resources>
    <string name="app_name" translatable="false">GoogleBooksClient</string>
    <string name="search_for_your_book">Books and magazines finder</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="search_for_magazine">Search for magazine</string>
    <string name="search">Search</string>
    <string name="books">Books</string>
    <string name="magazines">Magazines</string>
    <string name="all">All</string>

    <string name="error_at_least_one_field">At least one field is required</string>
    <string name="error_title_required">Title is required</string>

    <string name="results">Results</string>
    <string name="no_results">No results found</string>
    <string name="loading">Loading</string>
    <string name="error_loading">Error loading results</string>"
    <string name="error_loading_link">Error loading link</string>
    <string name="error_link_unavailable">Error link unavailable</string>

</resources>